--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&family=Sono:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap");
@@ -146,16 +147,16 @@ header .navbar-collapse .desplegable .dropdown-item:hover {
   text-shadow: rgba(253, 253, 253, 0.637) 2px 0px 5px;
 }
 .cont1 .item1 a.boton2 {
-  color: rgba(0, 0, 0, 0.884);
+  color: rgb(0, 0, 0);
   background: rgba(1, 74, 3, 0.514);
-  background: linear-gradient(104deg, rgba(1, 74, 3, 0.9444152661) 0%, rgba(9, 121, 24, 0.644) 35%, rgba(5, 180, 37, 0.623) 100%);
+  background: linear-gradient(104deg, rgba(1, 74, 3, 0.9444152661) 0%, rgba(12, 196, 36, 0.644) 35%, rgba(5, 180, 37, 0.623) 100%);
   border: 3px solid black;
   border-radius: 50px;
   text-decoration: none;
-  font-size: 40px;
-  font-family: "Kalam";
-  font-weight: bold;
-  text-shadow: rgba(0, 0, 0, 0.637) 1px 0 10px;
+  font-size: 30px;
+  font-family: "cinzel";
+  font-style: italic;
+  text-shadow: rgba(77, 238, 104, 0.815) 1px 0 10px;
   display: block;
   text-align: center;
   margin-left: 100px;
@@ -201,12 +202,6 @@ h2.sec3 {
   text-shadow: rgba(0, 0, 0, 0.404) 0px 2px 5px;
   margin-top: 20px;
 }
-.cont2 .cont_planes .planes__precio {
-  font-family: "Alegreya SC", serif;
-  font-size: 40px;
-  line-height: 35px;
-  text-shadow: rgba(0, 0, 0, 0.404) 0px 2px 5px;
-}
 .cont2 .cont_planes .planes__descripcion {
   padding: 20px;
   margin: 20px;
@@ -244,6 +239,7 @@ h2.sec3 {
   text-decoration: none;
   text-align: center;
   text-shadow: rgba(18, 59, 2, 0.993) 0px 2px 5px;
+  padding-top: 60px;
   padding-bottom: 10px;
 }
 .cont2 .cont_planes .planes--oro:hover {
@@ -278,6 +274,7 @@ h2.sec3 {
   text-align: center;
   text-shadow: rgba(18, 59, 2, 0.993) 0px 2px 5px;
   margin-top: 150px;
+  padding-bottom: 10px;
 }
 .cont2 .cont_planes .planes--plata:hover {
   scale: 1.15;
@@ -309,7 +306,8 @@ h2.sec3 {
   text-decoration: none;
   text-align: center;
   text-shadow: rgba(18, 59, 2, 0.993) 0px 2px 5px;
-  margin-top: 180px;
+  margin-top: 150px;
+  padding-bottom: 10px;
 }
 .cont2 .cont_planes .planes--bronce:hover {
   scale: 1.15;
@@ -657,52 +655,66 @@ footer .redes i:hover {
 
 /*------!ALTRENO SWIM!------*/
 .cont11 {
-  background-color: #000000;
+  background-image: url(./Imgpileta/fondo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 20px;
   border: 1.5px solid #454343;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.cont11 .info, .cont11 .info--nueva {
+.cont11 .horarios {
   width: 100%;
-  height: 100px;
-  background-color: rgba(6, 201, 201, 0.603);
-  border-radius: 10px;
-  box-shadow: inset 0px 0px 15px aqua;
-  filter: grayscale(100%);
+  border-collapse: collapse;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  font-size: 20px;
 }
-.cont11 .info .texto11, .cont11 .info--nueva .texto11 {
-  color: rgb(0, 0, 0);
-  font-size: 50px;
-  text-shadow: black 0 10px 10px;
+.cont11 th, .cont11 td {
+  border: 2px solid rgba(0, 0, 0, 0.445);
+  padding: 8px;
   text-align: center;
 }
-.cont11 .info--nueva {
-  margin-top: 10px;
+.cont11 th {
+  background-color: rgba(54, 215, 255, 0.6039215686);
 }
-.cont11 .info--nueva .texto12 {
-  color: rgba(255, 255, 255, 0.795);
-  font-weight: 100px;
-  font-family: "Cinzel", serif;
-  text-shadow: rgba(253, 253, 253, 0.637) 2px 0px 5px;
-  font-size: 50px;
-  text-align: center;
+.cont11 .hora-columna {
+  font-weight: bold;
+  background-color: rgba(54, 215, 255, 0.6039215686);
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
-.cont11 .info--nueva .texto12 span {
-  color: rgb(0, 0, 0);
+.cont11 .hora {
+  background-color: rgba(8, 8, 8, 0.8823529412);
+  color: #ffffff;
+  text-shadow: 0px 0px 5px rgb(252, 252, 252);
 }
-.cont11 .info:hover, .cont11 .info--nueva:hover {
-  filter: grayscale(0%);
+.cont11 .clase-celda {
+  font-style: italic;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.5333333333);
+}
+.cont11 .sabados {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
+  margin-top: 30px;
+}
+.cont11 .sabados .clase-celda {
+  background-color: rgba(255, 255, 255, 0.5333333333);
+  width: 300px;
 }
 
 .altrenoswim {
-  background-image: url(./Imgpileta/fondo.png);
-  background-position: center;
-  background-attachment: fixed;
-  min-height: 100vh;
+  background-color: #00a9c7;
+  min-height: 2000px;
   background-size: cover;
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat 8, 200px;
+  grid-template-rows: repeat 10, 200px;
   grid-gap: 20px;
 }
 .altrenoswim .foto {
@@ -719,37 +731,44 @@ footer .redes i:hover {
   grid-row: 1/5;
 }
 .altrenoswim .foto2 {
-  background-image: url(./Imgpileta/aquagym.png);
+  background-image: url(./Imgpileta/pileta.jpg);
   grid-column: 2/4;
   grid-row: 1/3;
 }
 .altrenoswim .foto3 {
-  background-image: url(./Imgpileta/swimming-pool-765312_640.jpg);
+  background-image: url(./Imgpileta/jubilados.jpg);
   grid-column: 2/3;
-  grid-row: 3/5;
+  grid-row: 3/6;
 }
 .altrenoswim .foto4 {
-  background-image: url(./Imgpileta/natacion\ equipo.png);
+  background-image: url(./Imgpileta/jubilados2.jpg);
+  grid-column: 3/4;
+  grid-row: 3/5;
 }
 .altrenoswim .foto5 {
-  background-image: url(./Imgpileta/swimming-78112_640.jpg);
-  grid-column: 3/4;
-  grid-row: 3/4;
+  background-image: url(./Imgpileta/pileta2.jpg);
+  grid-column: 1/2;
+  grid-row: 5/6;
 }
 .altrenoswim .foto6 {
-  background-image: url(./Imgpileta/swimmers-79592_640.jpg);
-  grid-column: 1/2;
-  grid-row: 5/7;
+  background-image: url(./Imgpileta/infantil.jpg);
+  grid-column: 3/4;
+  grid-row: 6/9;
 }
 .altrenoswim .foto7 {
-  background-image: url(./Imgpileta/asda.jpg);
-  grid-column: 3/4;
-  grid-row: 4/6;
+  background-image: url(./Imgpileta/inicial.jpg);
+  grid-column: 1/2;
+  grid-row: 6/9;
 }
 .altrenoswim .foto8 {
-  background-image: url(./Imgpileta/swimming-924895_640.jpg);
-  grid-column: 2/4;
-  grid-row: 6/7;
+  background-image: url(./Imgpileta/niños.jpg);
+  grid-column: 2/3;
+  grid-row: 6/9;
+}
+.altrenoswim .foto9 {
+  background-image: url(./Imgpileta/altreniswun.jpg);
+  grid-column: 3/4;
+  grid-row: 5/6;
 }
 
 .altrenoswim .foto:hover {
@@ -926,55 +945,121 @@ footer .redes i:hover {
     height: 280px;
   }
   /*------!ALTRENO SWIM!------*/
-  .cont11 .info, .cont11 .info--nueva {
+  .cont11 {
+    background-image: url(./Imgpileta/fondo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 10px;
+    border: 1.5px solid #454343;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .cont11 .horarios {
     width: 100%;
-    height: 70px;
-    background-color: rgba(6, 201, 201, 0.603);
-    filter: grayscale(100%);
+    border-collapse: collapse;
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+    font-size: 10px;
   }
-  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
-    padding-top: 10px;
-    font-size: 20px;
+  .cont11 th, .cont11 td {
+    border: 2px solid rgba(0, 0, 0, 0.445);
+    padding: 0px;
+    text-align: center;
   }
-  .cont11 .info--nueva .texto12 {
-    font-size: 20px;
+  .cont11 th {
+    background-color: rgba(54, 215, 255, 0.6039215686);
+  }
+  .cont11 .hora-columna {
+    font-weight: bold;
+    background-color: rgba(54, 215, 255, 0.6039215686);
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+  }
+  .cont11 .hora {
+    background-color: rgba(8, 8, 8, 0.8823529412);
+    color: #ffffff;
+    text-shadow: 0px 0px 0px rgb(252, 252, 252);
+  }
+  .cont11 .clase-celda {
+    font-style: italic;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.5333333333);
+  }
+  .cont11 .sabados {
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+    margin-top: 30px;
+  }
+  .cont11 .sabados .clase-celda {
+    background-color: rgba(255, 255, 255, 0.5333333333);
+    width: 300px;
   }
   .altrenoswim {
+    background-color: #00a9c7;
+    min-height: 2000px;
+    background-size: cover;
+    padding: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat 9, 200px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat 10, 200px;
+    grid-gap: 20px;
+  }
+  .altrenoswim .foto {
+    width: 100%;
+    background-color: #333;
+    border: 5px solid #ffffff;
+    background-size: cover;
+    background-position: center;
+    filter: grayscale(100%);
   }
   .altrenoswim .foto1 {
-    grid-column: 1/2;
-    grid-row: 1/3;
+    background-image: url(./Imgpileta/vertical.jpg);
+    background-position: top;
+    grid-column: 1/4;
+    grid-row: 1/4;
   }
   .altrenoswim .foto2 {
-    grid-column: 1/3;
-    grid-row: 5/6;
+    background-image: url(./Imgpileta/pileta.jpg);
+    grid-column: 1/4;
+    grid-row: 4/5;
   }
   .altrenoswim .foto3 {
-    grid-column: 1/3;
-    grid-row: 3/5;
+    background-image: url(./Imgpileta/jubilados.jpg);
+    grid-column: 1/4;
+    grid-row: 5/8;
   }
   .altrenoswim .foto4 {
-    grid-column: 2/3;
-    grid-row: 1/3;
+    background-image: url(./Imgpileta/jubilados2.jpg);
+    grid-column: 1/4;
+    grid-row: 8/10;
   }
   .altrenoswim .foto5 {
-    grid-column: 1/2;
-    grid-row: 6/7;
+    background-image: url(./Imgpileta/pileta2.jpg);
+    grid-column: 1/4;
+    grid-row: 10/11;
   }
   .altrenoswim .foto6 {
-    grid-column: 1/2;
-    grid-row: 7/9;
+    background-image: url(./Imgpileta/infantil.jpg);
+    grid-column: 1/4;
+    grid-row: 11/14;
   }
   .altrenoswim .foto7 {
-    grid-column: 2/3;
-    grid-row: 6/8;
+    background-image: url(./Imgpileta/inicial.jpg);
+    grid-column: 1/4;
+    grid-row: 14/17;
   }
   .altrenoswim .foto8 {
-    grid-column: 2/3;
-    grid-row: 8/9;
+    background-image: url(./Imgpileta/niños.jpg);
+    grid-column: 1/4;
+    grid-row: 17/20;
+  }
+  .altrenoswim .foto9 {
+    background-image: url(./Imgpileta/altreniswun.jpg);
+    grid-column: 1/4;
+    grid-row: 20/22;
   }
   .altrenoswim .foto:hover {
     transform: scale(1.02);
@@ -1160,19 +1245,57 @@ footer .redes i:hover {
     height: 280px;
   }
   /*------!ALTRENO SWIM!------*/
-  .cont11 .info, .cont11 .info--nueva {
+  .cont11 {
+    background-image: url(./Imgpileta/fondo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 10px;
+    border: 1.5px solid #454343;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .cont11 .horarios {
     width: 100%;
-    height: 70px;
-    background-color: rgba(6, 201, 201, 0.603);
-    filter: grayscale(100%);
+    border-collapse: collapse;
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+    font-size: 15px;
   }
-  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
-    padding-top: 10px;
-    font-size: 30px;
+  .cont11 th, .cont11 td {
+    border: 2px solid rgba(0, 0, 0, 0.445);
+    padding: 0px;
+    text-align: center;
   }
-  .cont11 .info--nueva .texto12 {
-    font-size: 20px;
-    padding-top: 20px;
+  .cont11 th {
+    background-color: rgba(54, 215, 255, 0.6039215686);
+  }
+  .cont11 .hora-columna {
+    font-weight: bold;
+    background-color: rgba(54, 215, 255, 0.6039215686);
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+  }
+  .cont11 .hora {
+    background-color: rgba(8, 8, 8, 0.8823529412);
+    color: #ffffff;
+    text-shadow: 0px 0px 0px rgb(252, 252, 252);
+  }
+  .cont11 .clase-celda {
+    font-style: italic;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.5333333333);
+  }
+  .cont11 .sabados {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    text-shadow: 0px 0px 0px rgb(0, 0, 0);
+    margin-top: 30px;
+  }
+  .cont11 .sabados .clase-celda {
+    background-color: rgba(255, 255, 255, 0.5333333333);
+    width: 300px;
   }
   .altrenoswim {
     display: grid;
@@ -1180,36 +1303,51 @@ footer .redes i:hover {
     grid-template-rows: repeat 11, 200px;
   }
   .altrenoswim .foto1 {
+    background-image: url(./Imgpileta/vertical.jpg);
+    background-position: top;
     grid-column: 1/2;
-    grid-row: 1/3;
+    grid-row: 1/5;
   }
   .altrenoswim .foto2 {
-    grid-column: 1/3;
-    grid-row: 6/8;
+    background-image: url(./Imgpileta/pileta.jpg);
+    grid-column: 1/4;
+    grid-row: 5/7;
   }
   .altrenoswim .foto3 {
-    grid-column: 1/2;
-    grid-row: 3/6;
+    background-image: url(./Imgpileta/jubilados.jpg);
+    grid-column: 2/4;
+    grid-row: 1/5;
   }
   .altrenoswim .foto4 {
-    grid-column: 2/3;
-    grid-row: 1/3;
+    background-image: url(./Imgpileta/jubilados2.jpg);
+    grid-column: 1/2;
+    grid-row: 7/10;
   }
   .altrenoswim .foto5 {
-    grid-column: 1/2;
-    grid-row: 8/10;
+    background-image: url(./Imgpileta/pileta2.jpg);
+    grid-column: 1/4;
+    grid-row: 10/11;
   }
   .altrenoswim .foto6 {
-    grid-column: 2/3;
-    grid-row: 3/6;
+    background-image: url(./Imgpileta/infantil.jpg);
+    grid-column: 1/2;
+    grid-row: 11/15;
   }
   .altrenoswim .foto7 {
-    grid-column: 2/3;
-    grid-row: 8/10;
+    background-image: url(./Imgpileta/inicial.jpg);
+    grid-column: 2/4;
+    grid-row: 11/15;
   }
   .altrenoswim .foto8 {
-    grid-column: 1/3;
-    grid-row: 10/11;
+    background-image: url(./Imgpileta/niños.jpg);
+    grid-column: 1/4;
+    grid-row: 15/18;
+    background-position: top;
+  }
+  .altrenoswim .foto9 {
+    background-image: url(./Imgpileta/altreniswun.jpg);
+    grid-column: 2/4;
+    grid-row: 7/10;
   }
   .altrenoswim .foto:hover {
     transform: scale(1.02);
@@ -1371,19 +1509,57 @@ footer .redes i:hover {
     padding-right: 20px;
   }
   /*ALTRENO SWIM*/
-  .cont11 .info, .cont11 .info--nueva {
-    width: 100%;
-    height: 70px;
-    background-color: rgba(6, 201, 201, 0.603);
-    filter: grayscale(100%);
+  .altrenoswim {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat 11, 200px;
   }
-  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
-    padding-top: 10px;
-    font-size: 35px;
+  .altrenoswim .foto1 {
+    background-image: url(./Imgpileta/vertical.jpg);
+    background-position: top;
+    grid-column: 1/2;
+    grid-row: 1/5;
   }
-  .cont11 .info--nueva .texto12 {
-    font-size: 30px;
-    padding-top: 10px;
+  .altrenoswim .foto2 {
+    background-image: url(./Imgpileta/pileta.jpg);
+    grid-column: 1/4;
+    grid-row: 5/7;
+  }
+  .altrenoswim .foto3 {
+    background-image: url(./Imgpileta/jubilados.jpg);
+    grid-column: 2/4;
+    grid-row: 1/5;
+  }
+  .altrenoswim .foto4 {
+    background-image: url(./Imgpileta/jubilados2.jpg);
+    grid-column: 1/2;
+    grid-row: 7/10;
+  }
+  .altrenoswim .foto5 {
+    background-image: url(./Imgpileta/pileta2.jpg);
+    grid-column: 1/4;
+    grid-row: 10/11;
+  }
+  .altrenoswim .foto6 {
+    background-image: url(./Imgpileta/infantil.jpg);
+    grid-column: 1/2;
+    grid-row: 11/15;
+  }
+  .altrenoswim .foto7 {
+    background-image: url(./Imgpileta/inicial.jpg);
+    grid-column: 2/4;
+    grid-row: 11/15;
+  }
+  .altrenoswim .foto8 {
+    background-image: url(./Imgpileta/niños.jpg);
+    grid-column: 1/4;
+    grid-row: 15/18;
+    background-position: top;
+  }
+  .altrenoswim .foto9 {
+    background-image: url(./Imgpileta/altreniswun.jpg);
+    grid-column: 2/4;
+    grid-row: 7/10;
   }
   /* ACTIVIDADES */
   .cont6 {
@@ -1564,6 +1740,58 @@ footer .redes i:hover {
     padding-right: 20px;
     width: 100%;
     height: 300px;
+  }
+  .altrenoswim {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat 9, 200px;
+  }
+  .altrenoswim .foto1 {
+    background-image: url(./Imgpileta/vertical.jpg);
+    background-position: center;
+    grid-column: 1/2;
+    grid-row: 1/4;
+  }
+  .altrenoswim .foto2 {
+    background-image: url(./Imgpileta/pileta.jpg);
+    grid-column: 2/4;
+    grid-row: 4/6;
+  }
+  .altrenoswim .foto3 {
+    background-image: url(./Imgpileta/jubilados.jpg);
+    grid-column: 2/3;
+    grid-row: 1/4;
+  }
+  .altrenoswim .foto4 {
+    background-image: url(./Imgpileta/jubilados2.jpg);
+    grid-column: 3/4;
+    grid-row: 1/4;
+  }
+  .altrenoswim .foto5 {
+    background-image: url(./Imgpileta/pileta2.jpg);
+    grid-column: 2/4;
+    grid-row: 6/8;
+  }
+  .altrenoswim .foto6 {
+    background-image: url(./Imgpileta/infantil.jpg);
+    grid-column: 1/2;
+    grid-row: 8/11;
+  }
+  .altrenoswim .foto7 {
+    background-image: url(./Imgpileta/inicial.jpg);
+    grid-column: 2/3;
+    grid-row: 8/11;
+  }
+  .altrenoswim .foto8 {
+    background-image: url(./Imgpileta/niños.jpg);
+    grid-column: 3/4;
+    grid-row: 8/11;
+    background-position: top;
+  }
+  .altrenoswim .foto9 {
+    background-image: url(./Imgpileta/altreniswun.jpg);
+    grid-column: 1/2;
+    grid-row: 4/8;
   }
   /* INSCRIPCION */
   .cont5 .item4 {
